Actions
Bug #720
closedbe_utils should not use python
Start date:
2011-02-09
Due date:
% Done:
100%
Estimated time:
Difficulty:
Tags:
Gerrit CR:
Description
be_utils from libbe still use python for creating grub menu.
Updated by Alexander Eremin over 11 years ago
- Category set to cmd - userland programs
- Assignee set to Alexander Eremin
Updated by Alexander Eremin over 11 years ago
- Status changed from New to In Progress
- % Done changed from 0 to 30
Updated by Gordon Ross over 11 years ago
- Status changed from In Progress to Resolved
- % Done changed from 30 to 100
pushed
changeset: 13305:c0863802718a tag: tip user: Alexander Eremin <a.eremin@nexenta.com> date: Fri Mar 18 14:06:44 2011 -0400 description: 720 be_utils should not use python Reviewed by: Garrett D'Amore <garrett@nexenta.com> Reviewed by: Dan McDonald <danmcd@nexenta.com> Approved by: Gordon Ross <gwr@nexenta.com>
Actions